# basic_rust_blog

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/routes/: test.rs
