[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
juniper = "0.16.1"
juniper_axum = "0.2.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0.140"
